@@ -62,6 +62,12 @@ The following functions use the global state created by
   line has been read, returns \code{None}.
 \end{funcdesc}
 
+\begin{funcdesc}{fileno}{}
+  Return the integer ``file descriptor'' for the current file. When no
+  file is opened (before the first line and between files), returns
+  \code{-1}.
+\end{funcdesc}
+
 \begin{funcdesc}{lineno}{}
   Return the cumulative line number of the line that has just been
   read.  Before the first line has been read, returns \code{0}.  After
@@ -107,10 +113,11 @@ module is available for subclassing as well:
 \begin{classdesc}{FileInput}{\optional{files\optional{,
                              inplace\optional{, backup}}}}
   Class \class{FileInput} is the implementation; its methods
-  \method{filename()}, \method{lineno()}, \method{fileline()},
-  \method{isfirstline()}, \method{isstdin()}, \method{nextfile()} and
-  \method{close()} correspond to the functions of the same name in the
-  module.  In addition it has a \method{readline()} method which
+  \method{filename()}, \method{fileno()}, \method{lineno()},
+  \method{fileline()}, \method{isfirstline()}, \method{isstdin()},
+  \method{nextfile()} and \method{close()} correspond to the functions
+  of the same name in the module.
+  In addition it has a \method{readline()} method which
   returns the next input line, and a \method{__getitem__()} method
   which implements the sequence behavior.  The sequence must be
   accessed in strictly sequential order; random access and
